--- a/src/Savvyio.Queries/Savvyio.Queries.csproj
+++ b/src/Savvyio.Queries/Savvyio.Queries.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <Description>Provides the fundamental classes and interfaces to work with the Query part of the CQRS pattern (Command and Query Responsibility Segregation).</Description>
+    <PackageTags>cqrs query query-async query-handler</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
