--- a/.azure/steps/dotnet.yml
+++ b/.azure/steps/dotnet.yml
@@ -1,5 +1,5 @@
 ﻿steps:
   - task: UseDotNet@2
-    displayName: 'Use .Net SDK 6.0.101'
+    displayName: 'Use .Net SDK 6.0.x'
     inputs:
-      version: 6.0.101
+      version: 6.0.x
