--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,8 +2,8 @@
 <configuration>
   <packageSources>
     <clear />
-    <!-- Cuemon CI build feed -->
-    <add key="cuemon" value="https://nuget.cuemon.net/v3/index.json" />
+    <!-- Codebelt CI build feed -->
+    <add key="codebelt" value="https://nuget.codebelt.net/v3/index.json" />
     <!-- Defaul nuget feed -->
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
