--- a/src/Savvyio.Commands/Savvyio.Commands.csproj
+++ b/src/Savvyio.Commands/Savvyio.Commands.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>Provides the fundamental classes and interfaces to work with the Command part of the CQRS pattern (Command and Query Responsibility Segregation).</Description>
+    <PackageTags>cqrs command commit commit-async command-handler</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Core\Savvyio.Core.csproj" />
   </ItemGroup>
