--- a/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
+++ b/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>Extend the Savvy I/O core assemblies with support for Dapper.</Description>
+    <PackageTags>dapper query data-store dao data-access-object</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Dapper.StrongName" Version="2.0.123" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
