--- a/src/Savvyio.Extensions.EFCore.Domain/Savvyio.Extensions.EFCore.Domain.csproj
+++ b/src/Savvyio.Extensions.EFCore.Domain/Savvyio.Extensions.EFCore.Domain.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>Extend the Savvy I/O support for Microsoft Entity Framework Core - optimized for DDD (Domain Driven Design).</Description>
+    <PackageTags>ddd domain-driven-design aggregate-repository traced-aggregate-repository di depedency-injection marker data-store dao data-access-object</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Cuemon.Extensions.IO" Version="6.4.1" />
     <PackageReference Include="Cuemon.Extensions.Newtonsoft.Json" Version="6.4.1" />
