--- a/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
+++ b/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>Extend the Savvy I/O core assemblies with support for Microsoft Entity Framework Core.</Description>
+    <PackageTags>efcore entity-framework-core data-store dao data-access-object repository dbcontext</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
   </ItemGroup>
