Refactored from *DataAccessObject to *DataStore

--- a/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
+++ b/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Extend the Savvy I/O core assemblies with support for Dapper.</Description>
