Refactoring and consistency alignment

--- a/src/Savvyio.Extensions.DependencyInjection.EFCore.Domain/Savvyio.Extensions.DependencyInjection.EFCore.Domain.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection.EFCore.Domain/Savvyio.Extensions.DependencyInjection.EFCore.Domain.csproj
@@ -7,6 +7,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Domain\Savvyio.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection.Domain\Savvyio.Extensions.DependencyInjection.Domain.csproj" />
     <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection.EFCore\Savvyio.Extensions.DependencyInjection.EFCore.csproj" />
     <ProjectReference Include="..\Savvyio.Extensions.EFCore.Domain\Savvyio.Extensions.EFCore.Domain.csproj" />
   </ItemGroup>
