--- a/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
+++ b/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\src\Savvyio.Domain\Savvyio.Domain.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.EventDriven\Savvyio.EventDriven.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.Dapper\Savvyio.Extensions.Dapper.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.DapperExtensions\Savvyio.Extensions.DependencyInjection.DapperExtensions.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.Dapper\Savvyio.Extensions.DependencyInjection.Dapper.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.Domain\Savvyio.Extensions.DependencyInjection.Domain.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.csproj" />
