--- a/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
+++ b/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="7.0.0-preview.153" />
+  </ItemGroup>
+
 </Project>
