--- a/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
+++ b/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\Savvyio.Domain.EventSourcing.Tests\Savvyio.Domain.EventSourcing.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="7.0.0-preview.153" />
+  </ItemGroup>
+
 </Project>
