--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -5,13 +5,14 @@ parameters:
     type: boolean
   - name: linuxVmImage
     displayName: 'Linux VM Image'
-    default: 'ubuntu-20.04'
+    default: 'ubuntu-22.04'
     type: string
     values:
       - 'ubuntu-20.04'
+      - 'ubuntu-22.04'
   - name: windowsVmImage
     displayName: 'Windows VM Image'
-    default: 'windows-2019'
+    default: 'windows-2022'
     type: string
     values:
       - 'windows-2019'
