--- a/test/Savvyio.Core.Tests/Savvyio.Core.Tests.csproj
+++ b/test/Savvyio.Core.Tests/Savvyio.Core.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Security.Cryptography" Version="7.0.0-alpha.2" />
+    <PackageReference Include="Cuemon.Security.Cryptography" Version="7.0.0-rc.1" />
   </ItemGroup>
 
   <ItemGroup>
