ALM and .NET 7 support

--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -1,4 +1,24 @@
 ﻿jobs:
+  - job: BuildDotNet7_0
+    displayName: 'Master branch (net7.0, build)'
+    timeoutInMinutes: 60
+    pool:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
+    variables:
+      - name: DotnetBuildName
+        value: 'net7.0'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/download-snk.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/restore.yml
+    - template: ../steps/build-net7_0.yml
+    - template: ../steps/publish-artifact.yml
+
   - job: BuildDotNet6_0
     displayName: 'Master branch (net6.0, build)'
     timeoutInMinutes: 60
@@ -22,6 +42,7 @@
   - job: PublishBuildArtifacts
     condition: succeeded()
     dependsOn:
+    - BuildDotNet7_0
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Production'
     timeoutInMinutes: 30
