--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -1,6 +1,37 @@
 ﻿jobs:
+  - job: BuildDotNet7_0
+    displayName: 'Development branch (net7, build, test, code-coverage, code-analysis)'
+    timeoutInMinutes: 120
+    strategy:
+      matrix:
+        Linux_Build_and_Test:
+          imageName: ${{ parameters.linuxVmImage }}
+        Windows_Build_Test_and_Package:
+          imageName: ${{ parameters.windowsVmImage }}
+    pool:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: $(imageName)
+    variables:
+      - name: DotnetBuildName
+        value: 'net7.0'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/install-reportgenerator.yml
+    - template: ../steps/download-snk.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/restore.yml
+    - template: ../steps/sonarcloud-prepare.yml
+    - template: ../steps/build-net7_0.yml
+    - template: ../steps/unit-test.yml
+    - template: ../steps/codecov-setup.yml
+    - template: ../steps/sonarcloud-finalize.yml
+    - template: ../steps/publish-artifact.yml
+
   - job: BuildDotNet6_0
-    displayName: 'Development branch (net6, build, test, code-coverage, code-analysis)'
+    displayName: 'Development branch (net6, build)'
     timeoutInMinutes: 120
     strategy:
       matrix:
@@ -19,20 +50,16 @@
     steps:
     - template: ../steps/dotnet.yml
     - template: ../steps/install-minvertool.yml
-    - template: ../steps/install-reportgenerator.yml
     - template: ../steps/download-snk.yml
     - template: ../steps/minverversion-override.yml
     - template: ../steps/restore.yml
-    - template: ../steps/sonarcloud-prepare.yml
     - template: ../steps/build-net6_0.yml
-    - template: ../steps/unit-test.yml
-    - template: ../steps/codecov-setup.yml
-    - template: ../steps/sonarcloud-finalize.yml
     - template: ../steps/publish-artifact.yml
 
   - job: PublishBuildArtifacts
     condition: succeeded()
     dependsOn:
+    - BuildDotNet7_0
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Preview'
     timeoutInMinutes: 30
@@ -51,4 +78,5 @@
     - template: ../steps/publish-nuget.yml
       parameters:
         artifactPackages:
+          - "net7.0"
           - "net6.0"
