--- a/.azure/steps/unit-test.yml
+++ b/.azure/steps/unit-test.yml
@@ -10,6 +10,9 @@
         !**/Savvyio.Assets.EfCore.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
+    env:
+      CollectCoverage: true
+      CoverletOutputFormat: opencover
 
   - task: DotNetCoreCLI@2
     displayName: 'Test Solution - Windows'
@@ -22,6 +25,9 @@
         !**/Savvyio.Assets.EfCore.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
+    env:
+      CollectCoverage: true
+      CoverletOutputFormat: opencover
 
   - script: reportgenerator "-reports:**/*.opencover.xml" "-targetdir:$(Build.SourcesDirectory)/Coverage" "-reporttypes:Cobertura;HTMLInline;HTMLChart"
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
