--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -53,7 +53,7 @@ stages:
         selfHosted: ${{ parameters.selfHosted }}
         linuxVmImage: ${{ parameters.linuxVmImage }}
         windowsVmImage: ${{ parameters.windowsVmImage }}
-  - ${{ if endsWith(variables['build.sourceBranch'], 'master') }}:
+  - ${{ if endsWith(variables['build.sourceBranch'], 'main') }}:
     - template: stages/production.yml
       parameters:
         selfHosted: ${{ parameters.selfHosted }}
