master -> main fixes

--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -61,4 +61,5 @@
     - template: ../steps/publish-nuget.yml
       parameters:
         artifactPackages:
+          - "net7.0"
           - "net6.0"
