--- a/.azure/stages/production.yml
+++ b/.azure/stages/production.yml
@@ -1,7 +1,7 @@
 ﻿stages:
   - stage: BuildMaster
-    displayName: 'Build for master branch'
-    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'master'))
+    displayName: 'Build for main branch'
+    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'main'))
     variables:
       - group: BuildSecrets
       - name: BuildSource
@@ -16,8 +16,8 @@
         windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: UpdateBuildNumber
-    displayName: 'Updating BUILD_BUILDNUMBER for master branch'
-    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'master'))
+    displayName: 'Updating BUILD_BUILDNUMBER for main branch'
+    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'main'))
     dependsOn: BuildMaster
     jobs:
     - template: ../jobs/finalization.yml
@@ -27,8 +27,8 @@
         windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: DeployMaster
-    displayName: 'Deployment for master branch'
-    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'master'))
+    displayName: 'Deployment for main branch'
+    condition: and(succeeded(), endsWith(variables['build.sourceBranch'], 'main'))
     dependsOn: UpdateBuildNumber
     variables:
     - group: BuildSecrets
