Typo for PublishBuildArtifacts

--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -48,9 +48,9 @@
     timeoutInMinutes: 30
     pool:
       ${{ if eq(parameters.selfHosted, 'true') }}:
-        name: ${{ parameters.linuxVmImage }}
+        name: ${{ parameters.windowsVmImage }}
       ${{ if eq(parameters.selfHosted, 'false') }}:
-        vmImage: ${{ parameters.linuxVmImage }}
+        vmImage: ${{ parameters.windowsVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'Production'
