--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -4,9 +4,9 @@
     timeoutInMinutes: 60
     pool:
       ${{ if eq(parameters.selfHosted, 'true') }}:
-        name: ${{ parameters.linuxVmImage }}
+        name: ${{ parameters.windowsVmImage }}
       ${{ if eq(parameters.selfHosted, 'false') }}:
-        vmImage: ${{ parameters.linuxVmImage }}
+        vmImage: ${{ parameters.windowsVmImage }}
     variables:
       - name: DotnetBuildName
         value: 'net7.0'
@@ -24,9 +24,9 @@
     timeoutInMinutes: 60
     pool:
       ${{ if eq(parameters.selfHosted, 'true') }}:
-        name: ${{ parameters.linuxVmImage }}
+        name: ${{ parameters.windowsVmImage }}
       ${{ if eq(parameters.selfHosted, 'false') }}:
-        vmImage: ${{ parameters.linuxVmImage }}
+        vmImage: ${{ parameters.windowsVmImage }}
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
