--- a/src/Savvyio.Core/Savvyio.Core.csproj
+++ b/src/Savvyio.Core/Savvyio.Core.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <RootNamespace>Savvyio</RootNamespace>
-    <Description>Provides the fundamental abstractions and classes for supporting a complete flow of DDD, CQRS and Event Sourcing concepts.</Description>
-    <PackageTags>ddd domain-driven-design dispatchers dispatcher data-store repository dao data-access-object handler handlers fire-forget-handler request-reply-handler message-exchange-pattern request metadata</PackageTags>
+    <Description>Provides the fundamental abstractions and classes for supporting a complete flow of DDD, CQRS and Event Sourcing concepts including the option to scale out with distributed subsystems.</Description>
+    <PackageTags>ddd domain-driven-design dispatchers dispatcher data-store repository dao data-access-object handler handlers fire-forget-handler request-reply-handler message-exchange-pattern request metadata messaging microservice microservices</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
