--- a/.azure/steps/unit-test.yml
+++ b/.azure/steps/unit-test.yml
@@ -11,6 +11,9 @@
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
     env:
+      AWS__CallerIdentity: $(AWS--CallerIdentity)
+      AWS__IAM__AccessKey: $(AWS--IAM--AccessKey)
+      AWS__IAM__SecretKey: $(AWS--IAM--SecretKey)
       CollectCoverage: true
       CoverletOutputFormat: opencover
 
@@ -26,6 +29,9 @@
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
     env:
+      AWS__CallerIdentity: $(AWS--CallerIdentity)
+      AWS__IAM__AccessKey: $(AWS--IAM--AccessKey)
+      AWS__IAM__SecretKey: $(AWS--IAM--SecretKey)
       CollectCoverage: true
       CoverletOutputFormat: opencover
 
