--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,4 @@ ModelManifest.xml
 .history
 .ionide
 /test/Savvyio.Extensions.SimpleQueueService.Tests/appsettings.json
+/test/Savvyio.FunctionalTests/appsettings.json
