--- a/src/Savvyio.Extensions.EFCore.Domain.EventSourcing/Savvyio.Extensions.EFCore.Domain.EventSourcing.csproj
+++ b/src/Savvyio.Extensions.EFCore.Domain.EventSourcing/Savvyio.Extensions.EFCore.Domain.EventSourcing.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Domain.EventSourcing\Savvyio.Domain.EventSourcing.csproj" />
     <ProjectReference Include="..\Savvyio.Extensions.EFCore.Domain\Savvyio.Extensions.EFCore.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.Newtonsoft.Json\Savvyio.Extensions.Newtonsoft.Json.csproj" />
   </ItemGroup>
 
 </Project>
