--- a/src/Savvyio.Extensions.SimpleQueueService/Savvyio.Extensions.SimpleQueueService.csproj
+++ b/src/Savvyio.Extensions.SimpleQueueService/Savvyio.Extensions.SimpleQueueService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Extend the Savvy I/O core assemblies with support for Amazon Simple Queue Service (AWS SQS) paired with Amazon Simple Notification Service (AWS SNS).</Description>
@@ -9,7 +9,6 @@
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.100.22" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.100.22" />
     <PackageReference Include="Cuemon.Extensions.IO" Version="7.0.0" />
-    <PackageReference Include="Cuemon.Extensions.Newtonsoft.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
   </ItemGroup>
 
@@ -17,6 +16,7 @@
     <ProjectReference Include="..\Savvyio.Core\Savvyio.Core.csproj" />
     <ProjectReference Include="..\Savvyio.Commands\Savvyio.Commands.csproj" />
     <ProjectReference Include="..\Savvyio.EventDriven\Savvyio.EventDriven.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.Newtonsoft.Json\Savvyio.Extensions.Newtonsoft.Json.csproj" />
   </ItemGroup>
 
 </Project>
