--- a/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
+++ b/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
@@ -5,8 +5,16 @@
     <PackageTags>efcore entity-framework-core data-store dao data-access-object repository dbcontext</PackageTags>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net8'))">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net7'))">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net6'))">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
   </ItemGroup>
 
   <ItemGroup>
