Updated pipeline to .NET 8 and removed preview for codebelt (use select packages on NuGet)

--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -19,10 +19,13 @@
                 artifactName: 'Preview'
                 downloadPath: '$(System.DefaultWorkingDirectory)'
 
-            - task: NuGetCommand@2
-              displayName: 'Publish NuGet Packages to https://nuget.codebelt.net/v3/index.json'
+            - task: NuGetToolInstaller@1
+              displayName: Install NuGet
               inputs:
-                command: push
-                packagesToPush: '$(System.DefaultWorkingDirectory)/**/*.nupkg;$(System.DefaultWorkingDirectory)/**/*.snupkg'
-                nuGetFeedType: external
-                publishFeedCredentials: 'Codebelt-Nuget'
+                versionSpec: 6.7.0
+
+            - task: NuGetCommand@2
+              displayName: 'Publish NuGet Packages to https://api.nuget.org/v3/index.json'
+              inputs:
+                command: custom
+                arguments: 'push $(System.DefaultWorkingDirectory)/**/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey $(nuget-official-apikey) -SkipDuplicate'
