--- a/.azure/jobs/deployment-production.yml
+++ b/.azure/jobs/deployment-production.yml
@@ -19,6 +19,11 @@
                 artifactName: 'Production'
                 downloadPath: '$(System.DefaultWorkingDirectory)'
 
+            - task: NuGetToolInstaller@1
+              displayName: Install NuGet
+              inputs:
+                versionSpec: 6.7.0
+
             - task: NuGetCommand@2
               displayName: 'Publish NuGet Packages to https://api.nuget.org/v3/index.json'
               inputs:
