--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -1,4 +1,24 @@
 ﻿jobs:
+  - job: BuildDotNet8_0
+    displayName: 'Master branch (net8.0, build)'
+    timeoutInMinutes: 60
+    pool:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.windowsVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.windowsVmImage }}
+    variables:
+      - name: DotnetBuildName
+        value: 'net7.0'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/download-snk.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/restore.yml
+    - template: ../steps/build-net8_0.yml
+    - template: ../steps/publish-artifact.yml
+
   - job: BuildDotNet7_0
     displayName: 'Master branch (net7.0, build)'
     timeoutInMinutes: 60
@@ -42,6 +62,7 @@
   - job: PublishBuildArtifacts
     condition: succeeded()
     dependsOn:
+    - BuildDotNet8_0
     - BuildDotNet7_0
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for Production'
@@ -61,5 +82,6 @@
     - template: ../steps/publish-nuget.yml
       parameters:
         artifactPackages:
+          - "net8.0"
           - "net7.0"
           - "net6.0"
