--- a/.azure/jobs/build-staging.yml
+++ b/.azure/jobs/build-staging.yml
@@ -1,6 +1,34 @@
 ﻿jobs:
+  - job: BuildDotNet8_0
+    displayName: 'Release branch (net8, build, test)'
+    timeoutInMinutes: 90
+    strategy:
+      matrix:
+        Linux_Build_and_Test:
+          imageName: ${{ parameters.linuxVmImage }}
+        Windows_Build_Test_and_Package:
+          imageName: ${{ parameters.windowsVmImage }}
+    pool:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: $(imageName)
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: $(imageName)
+    variables:
+      - name: DotnetBuildName
+        value: 'net8.0'
+    steps:
+    - template: ../steps/dotnet.yml
+    - template: ../steps/install-minvertool.yml
+    - template: ../steps/install-reportgenerator.yml
+    - template: ../steps/download-snk.yml
+    - template: ../steps/minverversion-override.yml
+    - template: ../steps/restore.yml
+    - template: ../steps/build-net8_0.yml
+    - template: ../steps/unit-test.yml
+    - template: ../steps/publish-artifact.yml
+
   - job: BuildDotNet7_0
-    displayName: 'Release branch (net7, build, test)'
+    displayName: 'Release branch (net7, build)'
     timeoutInMinutes: 90
     strategy:
       matrix:
@@ -19,12 +47,10 @@
     steps:
     - template: ../steps/dotnet.yml
     - template: ../steps/install-minvertool.yml
-    - template: ../steps/install-reportgenerator.yml
     - template: ../steps/download-snk.yml
     - template: ../steps/minverversion-override.yml
     - template: ../steps/restore.yml
     - template: ../steps/build-net7_0.yml
-    - template: ../steps/unit-test.yml
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet6_0
@@ -56,6 +82,7 @@
   - job: PublishBuildArtifacts
     condition: succeeded()
     dependsOn:
+    - BuildDotNet8_0
     - BuildDotNet7_0
     - BuildDotNet6_0
     displayName: 'Store NuGet Packages for RC'
@@ -75,5 +102,6 @@
     - template: ../steps/publish-nuget.yml
       parameters:
         artifactPackages:
+          - "net8.0"
           - "net7.0"
           - "net6.0"
